Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138802

Wasm Accessibility: ASYNCIFY fails

XMLWordPrintable

    • WebAssembly
    • 835c0d911 (dev)

      when using asyncify, on occasion event["target"] does not match what is expected,

      happens for both ASYNCIFY 1, and JSPI

      problem is in qwasmaccessibility::
      handleEventFromHtmlElement

       

      A possible explanation is that we recreate our a11y tree on things like ParentChanged. If we have events in flight as this happen, the event will refer to the old instance of the objecst

        For Gerrit Dashboard: QTBUG-138802
        # Subject Branch Project Status CR V

            evenandersen Even Oscar Andersen
            evenandersen Even Oscar Andersen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes